<resources>
    <string name="app_name">Login_CRUD</string>
    <string name="codigo">Codigo</string>
    <string name="iniciar_sesion">Inicar Sesion</string>
    <string name="iniciar">Inicar</string>
    <string name="me_olvide_la_contrasenia">Me olvide la contrasenia</string>
    <string name="invalid_mail">ingrese un mail valido</string>
    <string name="invalid_password">ingrese una contraseña con mas de 6 caracteres </string>
    <string name="registrarse">Registrarse</string>
    <string name="mail">mail</string>
    <string name="contrasenia">contrasenia</string>
    <string name="gmail">gmail</string>
    <string name="facebook_app_id">348130413459372</string> <string name="fb_login_protocol_scheme">fb348130413459372</string>
    <string name="iniciarr">iniciar</string>
    <string name="registrarse_con_mail">registrarse con mail</string>
    <string name="subir_imagen">Subir Imagen</string>
    <string name="seleccionar_foto">Seleccionar Foto</string>
    <string name="subir_foto">subir Foto</string>
    <string name="yapa">Yapa</string>
    <string name="contenido">Contenido</string>
    <string name="clear_all_label">limpiar</string>
    <string name="make_an_order">Make an order</string>
    <string name="dialog_title">Categorías</string>
    <string name="ok_label">Aceptar</string>
    <string name="dismiss_label">Ocultar</string>
    <string name="confirmar">confirmar</string>
    <string name="cancelar">cancelar</string>
    <string name="ingrese_el_mail_que_uso_para_registrarse">Ingrese el mail que uso para registrarse</string>

    <string-array name="Colores">
        <item> </item>
        <item>AMARILLO</item>
        <item>VERDE</item>
        <item>CELESTE</item>
        <item>TURQUESA</item>
        <item>AZUL</item>
        <item>VIOLETA</item>
        <item>GRIS</item>
        <item>ROJO</item>
        <item>ROSA</item>
        <item>NARANJA</item>
        <item>NEGRO</item>
    </string-array>

</resources>