<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="140dp"
        tools:layout_editor_absoluteY="246dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_sesion" />

        <EditText
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/mail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/contrasenia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrasenia"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/gmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gmail" />

        <Button
            android:id="@+id/facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/facebook" />

        <Button
            android:id="@+id/olvideContrasenia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/me_olvide_la_contrasenia" />

        <Button
            android:id="@+id/confirmarInicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iniciarr" />

        <Button
            android:id="@+id/registrarseConMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrarse_con_mail" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>